read /types ready for /table /file

--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,7 @@ zip/unzip ops
 *********************************************
 not started:
 
-setsrciptlists kludge derived_test.ijs and tempcol_tut.ijs
- must write proper list when released to avoid using old ones
+jcs server should have jbin support
 
 derived cols
  csvwr/csvdump need option to not dump derived cols
